Fixed overlap issue of rentals first h1 and navbar

--- a/app/assets/stylesheets/pages/_rentals.scss
+++ b/app/assets/stylesheets/pages/_rentals.scss
@@ -2,3 +2,7 @@
   margin: 20px 0px;
   margin-left: 30px;
 }
+
+h1.header {
+  margin-top: 100px;
+}
